--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HailinChenbcit/COMP2537_Assignment#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
